--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -17,13 +17,15 @@
 
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
-	height: 24px;
-	width: 24px;
+	height: 34px;
+	width: 34px;
 }
 
 /* Color/shape of close button cross */
 .bm-cross {
-	background: #bdc3c7;
+	background: white;
+	height: 34px;
+	width: 34p;
 }
 
 /*
@@ -38,8 +40,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* General sidebar styles */
 .bm-menu {
 	background: black;
-	padding: 2.5em 1.5em 0;
-	font-size: 1.15em;
+	padding-top: 8rem;
+	text-align: center;
 }
 
 /* Morph shape necessary with bubble or elastic */
