--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -17,15 +17,16 @@
 
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
-	height: 34px;
-	width: 34px;
+	height: 50px;
+	width: 50px;
 }
 
 /* Color/shape of close button cross */
 .bm-cross {
 	background: white;
-	height: 34px;
-	width: 34p;
+	height: 50px;
+	width: 50px;
+	right: 0.3rem;
 }
 
 /*
