--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -80,5 +80,5 @@ Note: Beware of modifying this element as it can break the animations - you shou
 	padding: 1rem 0 1rem 1rem;
 	text-decoration: none;
 	letter-spacing: -0.08rem;
-	color: black;
+	color: #ffb700;
 }
