--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -84,9 +84,9 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 .menulink {
-	font-size: 6rem;
-	padding: 3rem 0;
-	font-weight: bold;
+	font-size: 8rem;
+	padding: 4rem 0;
+	font-weight: 900;
 	color: #ffffff;
 	text-decoration: none;
 	transition: color 0.1s linear;
@@ -102,3 +102,4 @@ Note: Beware of modifying this element as it can break the animations - you shou
 		padding: 2rem 0;
 	}
 }
+
