--- a/src/tachyons.css
+++ b/src/tachyons.css
@@ -104,24 +104,24 @@ select {
 	text-transform: none;
 }
 
-[type="button"],
-[type="reset"],
-[type="submit"],
+[type='button'],
+[type='reset'],
+[type='submit'],
 button {
 	-webkit-appearance: button;
 }
 
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner,
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner,
 button::-moz-focus-inner {
 	border-style: none;
 	padding: 0;
 }
 
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring,
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring,
 button:-moz-focusring {
 	outline: 1px dotted ButtonText;
 }
@@ -147,23 +147,23 @@ textarea {
 	overflow: auto;
 }
 
-[type="checkbox"],
-[type="radio"] {
+[type='checkbox'],
+[type='radio'] {
 	box-sizing: border-box;
 	padding: 0;
 }
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
 	height: auto;
 }
 
-[type="search"] {
+[type='search'] {
 	-webkit-appearance: textfield;
 	outline-offset: -2px;
 }
 
-[type="search"]::-webkit-search-decoration {
+[type='search']::-webkit-search-decoration {
 	-webkit-appearance: none;
 }
 
@@ -209,12 +209,12 @@ h5,
 h6,
 header,
 html,
-input[type="email"],
-input[type="number"],
-input[type="password"],
-input[type="tel"],
-input[type="text"],
-input[type="url"],
+input[type='email'],
+input[type='number'],
+input[type='password'],
+input[type='tel'],
+input[type='text'],
+input[type='url'],
 legend,
 li,
 main,
@@ -231,7 +231,6 @@ tr,
 ul {
 	box-sizing: border-box;
 }
-
 
 .aspect-ratio {
 	height: 0;
@@ -292,7 +291,6 @@ ul {
 	height: 100%;
 	z-index: 100;
 }
-
 
 .cover {
 	background-size: cover !important;
@@ -845,7 +843,7 @@ ul {
 
 .cf:after,
 .cf:before {
-	content: " ";
+	content: ' ';
 	display: table;
 }
 
@@ -1179,7 +1177,7 @@ code {
 }
 
 .mongoose {
-	font-family: "mongoose", sans-serif;
+	font-family: 'mongoose', sans-serif;
 }
 
 .i {
@@ -1390,7 +1388,7 @@ code {
 }
 
 .lh-copy {
-	line-height: 1.2;
+	line-height: 123%;
 }
 
 .link {
@@ -2187,6 +2185,7 @@ code {
 	background-color: inherit;
 }
 
+
 .hover-black:focus,
 .hover-black:hover {
 	color: #000;
@@ -2953,8 +2952,6 @@ code {
 	padding-bottom: 4rem;
 }
 
-
-
 .pv6 {
 	padding-top: 8rem;
 	padding-bottom: 8rem;
@@ -3014,7 +3011,6 @@ code {
 	padding-left: 5rem;
 	padding-right: 5rem;
 }
-
 
 .ph6 {
 	padding-left: 8rem;
@@ -3489,7 +3485,7 @@ code {
 
 .f8,
 .f-mega {
-	font-size: 18rem;
+	font-size: 13rem;
 }
 
 .f-7,
@@ -3528,6 +3524,10 @@ code {
 
 .f27 {
 	font-size: 1.75rem;
+}
+
+.f29 {
+	font-size: 1.625rem;
 }
 
 .f3 {
@@ -3730,7 +3730,7 @@ code {
 }
 
 .shadow-hover:after {
-	content: "";
+	content: '';
 	box-shadow: 0 0 16px 2px rgba(0, 0, 0, 0.2);
 	border-radius: inherit;
 	opacity: 0;
@@ -3824,13 +3824,13 @@ code {
 	list-style-type: none;
 }
 
-.nested-copy-indent p+p {
+.nested-copy-indent p + p {
 	text-indent: 1em;
 	margin-top: 0;
 	margin-bottom: 0;
 }
 
-.nested-copy-separator p+p {
+.nested-copy-separator p + p {
 	margin-top: 1.5em;
 }
 
@@ -3868,29 +3868,33 @@ code {
 }
 
 .debug-grid {
-	background: transparent url("data:image/png; base64, iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAFElEQVR4AWPAC97/9x0eCsAEPgwAVLshdpENIxcAAAAASUVORK5CYII=") repeat 0 0;
+	background: transparent
+		url('data:image/png; base64, iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAFElEQVR4AWPAC97/9x0eCsAEPgwAVLshdpENIxcAAAAASUVORK5CYII=')
+		repeat 0 0;
 }
 
 .debug-grid-16 {
-	background: transparent url("data:image/png; base64, iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAMklEQVR4AWOgCLz/b0epAa6UGuBOqQHOQHLUgFEDnAbcBZ4UGwDOkiCnkIhdgNgNxAYAiYlD+8sEuo8AAAAASUVORK5CYII=") repeat 0 0;
+	background: transparent
+		url('data:image/png; base64, iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAMklEQVR4AWOgCLz/b0epAa6UGuBOqQHOQHLUgFEDnAbcBZ4UGwDOkiCnkIhdgNgNxAYAiYlD+8sEuo8AAAAASUVORK5CYII=')
+		repeat 0 0;
 }
 
 .debug-grid-8-solid {
-	background: #fff url("data:image/gif; base64, R0lGODdhCAAIAPEAAADw/wDx /////wAAACwAAAAACAAIAAACDZQvgaeb/lxbAIKA8y0AOw==") repeat 0 0;
+	background: #fff
+		url('data:image/gif; base64, R0lGODdhCAAIAPEAAADw/wDx /////wAAACwAAAAACAAIAAACDZQvgaeb/lxbAIKA8y0AOw==')
+		repeat 0 0;
 }
 
 .debug-grid-16-solid {
-	background: #fff url("data:image/gif; base64, R0lGODdhEAAQAPEAAADw/wDx/xXy /////ywAAAAAEAAQAAACIZyPKckYDQFsb6ZqD85jZ2+BkwiRFKehhqQCQgDHcgwEBQA7") repeat 0 0;
+	background: #fff
+		url('data:image/gif; base64, R0lGODdhEAAQAPEAAADw/wDx/xXy /////ywAAAAAEAAQAAACIZyPKckYDQFsb6ZqD85jZ2+BkwiRFKehhqQCQgDHcgwEBQA7')
+		repeat 0 0;
 }
 
 @media screen and (min-width: 1440px) and (max-width: 2560px) {
-
 	.justify-between-vl {
-
 		justify-content: space-between;
-
 	}
-
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1350px) {
@@ -5676,13 +5680,13 @@ code {
 	}
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
 	.tso-m {
 		width: 300px;
 		height: 500px;
 	}
 
-	.tso-m>iframe {
+	.tso-m > iframe {
 		transform: scale(0.5);
 		position: relative;
 		top: -200px;
@@ -5691,8 +5695,6 @@ code {
 }
 
 @media screen and (min-width: 300px) and (max-width: 600px) {
-
-
 	.aspect-ratio-m {
 		height: 0;
 		position: relative;
@@ -6380,13 +6382,15 @@ code {
 	.fw9-m {
 		font-weight: 900;
 	}
-
 	.h1-m {
-		height: 1rem;
+		height: 2rem;
 	}
-
 	.h2-m {
 		height: 2rem;
+	}
+
+	.h23-m {
+		height: 5rem;
 	}
 
 	.h3-m {
@@ -6413,10 +6417,29 @@ code {
 		height: 12rem;
 	}
 
+	.h415-m {
+		height: 15rem;
+	}
+
 	.h5-m {
 		height: 16rem;
 	}
 
+	.h6-m {
+		height: 24rem;
+	}
+
+	.h7-m {
+		height: 32rem;
+	}
+
+	.h8-m {
+		height: 40rem;
+	}
+
+	.h9-m {
+		height: 48rem;
+	}
 	.h-25-m {
 		height: 25%;
 	}
@@ -6811,7 +6834,6 @@ code {
 	.pr35-m {
 		padding-right: 1.4rem;
 	}
-
 
 	.pr4-m {
 		padding-right: 2rem;
@@ -11023,6 +11045,10 @@ code {
 	.f-5-t,
 	.f-subheadline-t {
 		font-size: 5rem;
+	}
+
+	.f-4-t {
+		font-size: 4rem;
 	}
 
 	.f1-t {
